--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="main-nav__list menu">
           <li class="menu__list"><a href="#" class="menu__link menu__link--active">Главная</a></li>
           <li class="menu__list"><a href="" class="menu__link">Фотографии</a></li>
-          <li class="menu__list"><a href="" class="menu__link">Конкурс</a></li>
+          <li class="menu__list"><a href="form.html" class="menu__link">Конкурс</a></li>
           <li class="menu__list"><a href="" class="menu__link">HTML Academy</a></li>
         </ul>
       </nav>
@@ -107,11 +107,11 @@
           <h3 class="contacts__title">Звоните:</h3>
           +7 (812) 555-66-66
         </a>
-        <a href="" class="contacts__link">
+        <a href="mailto:mail@htmlacademy.ru" class="contacts__link">
           <h3 class="contacts__title">Пишите:</h3>
           mail@htmlacademy.ru
         </a>
-        <a href="" class="contacts__link">
+        <a href="#" class="contacts__link">
           <h3 class="contacts__title">Приезжайте в гости:</h3>
           ул. Большая Конюшенная, 19/8
         </a>
