--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button type="button" class="main-nav__button">Открыть/закрыть меню</button>
         <ul class="main-nav__list menu">
           <li class="menu__list"><a href="#" class="menu__link menu__link--active">Главная</a></li>
-          <li class="menu__list"><a href="" class="menu__link">Фотографии</a></li>
+          <li class="menu__list"><a href="photo.html" class="menu__link">Фотографии</a></li>
           <li class="menu__list"><a href="form.html" class="menu__link">Конкурс</a></li>
           <li class="menu__list"><a href="" class="menu__link">HTML Academy</a></li>
         </ul>
